--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نظام حساب تكاليف البناء - العراق</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <style>
@@ -452,7 +456,7 @@
         let lastResult = null; // لتخزين آخر استجابة لاستخدامها في PDF
         document.getElementById('buildingForm').addEventListener('submit', async (e) => {
             e.preventDefault();
-            const submitBtn = e.target.querySelector('button[type="submit"]');
+            const submitBtn = document.querySelector('button[type="submit"]');
             submitBtn.innerHTML = '<span class="material-icons-outlined">hourglass_top</span> جارٍ الحساب...';
             submitBtn.disabled = true;
 
@@ -495,7 +499,7 @@
                         hasFence: getValue('hasFence', false, false, true),
                         voidSize: getValue('waffleSlabInfo', false, false, true) ? getValue('voidSize', true) : 0,
                         voidCount: getValue('waffleSlabInfo', false, false, true) ? getValue('voidCount', false, true) : 0,
-                        facadeArea: getValue('customFacadeInfo', false, false, true) ? getValue('facadeArea', true) : 0,
+                        facadeArea: getValue('customFacadeInfo terminate action', false, false, true) ? getValue('facadeArea', true) : 0,
                         apartmentsCount: getValue('apartmentsInfo', false, false, true) ? getValue('apartmentsCount', false, true) : 0,
                         basementFloors: getValue('basementInfo', false, false, true) ? getValue('basementFloors', false, true) : 0,
                         basementCeilingArea: getValue('basementInfo', false, false, true) ? getValue('basementCeilingArea', true) : 0,
@@ -507,8 +511,8 @@
                         wallPainting: getValue('wallPaintingPrice', true),
                         windowsDoors: getValue('windowsDoorsPrice', true),
                         facadePrice: getValue('customFacadeInfo', false, false, true) ? getValue('facadePrice', true) : 0,
-                        stairsRailing: getValue('stairsRailingInfo', false, false, true) && getValue('hasMap', false, false, true) ? getValue('stairsRailingPrice', true) : 0,
-                        internalWalls: getValue('internalWallsInfo', false, false, true) && getValue('hasMap', false, false, true) ? getValue('internalWallsPrice', true) : 0
+                        stairsRailing: getValue('stairsRailingInfo', false, false, true) ? getValue('stairsRailingPrice', true) : 0,
+                        internalWalls: getValue('internalWallsInfo', false, false, true) ? getValue('internalWallsPrice', true) : 0
                     },
                     hasMap: getValue('hasMap', false, false, true),
                     technicalDetails: getValue('hasMap', false, false, true) ? {
@@ -523,15 +527,15 @@
                         roofFenceLength: getValue('roofFenceLength', true),
                         externalDoors: getValue('externalDoors', false, true),
                         internalDoors: getValue('internalDoors', false, true),
-                        facadeWindowsDoorsArea: getValue('facadeWindowsDoors', true),
+                        facadeWindowsDoorsArea: getValue('facadeWindowsDoorsArea', true),
                         skylightWindowsDoorsArea: getValue('skylightWindowsDoorsArea', true),
                         secondaryCeilingsArea: getValue('secondaryCeilingsArea', true),
                         decorativeWallsArea: getValue('decorativeWallsArea', true),
                         claddingWallsArea: getValue('claddingWallsArea', true),
                         plasterWallsArea: getValue('plasterWallsArea', true),
-                        concreteVolume: getValue('concreteColumnsInfo', false, false, true) && getValue('hasMap', false, false, true) ? getValue('concreteVolume', true) : 0,
-                        stairsRailingLength: getValue('stairsRailingInfo', false, false, true) && getValue('hasMap', false, false, true) ? getValue('stairsRailingLength', true) : 0,
-                        internalWallsArea: getValue('internalWallsInfo', false, false, true) && getValue('hasMap', false, false, true) ? getValue('internalWallsArea', true) : 0
+                        concreteVolume: getValue('concreteColumnsInfo', false, false, true) ? getValue('concreteVolume', true) : 0,
+                        stairsRailingLength: getValue('stairsRailingInfo', false, false, true) ? getValue('stairsRailingLength', true) : 0,
+                        internalWallsArea: getValue('internalWallsInfo', false, false, true) ? getValue('internalWallsArea', true) : 0
                     } : {},
                     customFacadeInfo: getValue('customFacadeInfo', false, false, true),
                     waffleSlabInfo: getValue('waffleSlabInfo', false, false, true),
@@ -555,32 +559,32 @@
 
                 const result = await response.json();
                 console.log('API Response:', result);
-                lastResult.result = result; // Store for PDF
+                lastResult = result; // تخزين الاستجابة لـ PDF
 
                 const resultContainer = document.getElementById('resultContainer');
                 const resultContent = document.getElementById('resultContent');
 
-                if (result && result.success && result.pdfData) {
+                if (result.success && result.result && result.result.pdfData) {
                     let tableRows = `
                         <tr><th>البيان</th><th>القيمة</th></tr>
-                        <tr><td>الرسالة</td><td>${result.message}</td></tr>
+                        <tr><td>الرسالة</td><td>${result.result.message}</td></tr>
                     `;
 
                     // بيانات العميل
-                    tableRows += `<tr><td colspan="2"><strong>${result.pdfData.customer.title}</strong></td></tr>`;
-                    result.pdfData.customer.fields.forEach(field => {
+                    tableRows += `<tr><td colspan="2"><strong>${result.result.pdfData.customer.title}</strong></td></tr>`;
+                    result.result.pdfData.customer.fields.forEach(field => {
                         tableRows += `<tr><td>${field.label}</td><td>${field.value}</td></tr>`;
                     });
 
                     // معلومات الموقع
-                    tableRows += `<tr><td colspan="2"><strong>${result.pdfData.location.title}</strong></tr>`;
-                    result.pdfData.location.fields.forEach(field => {
+                    tableRows += `<tr><td colspan="2"><strong>${result.result.pdfData.location.title}</strong></td></tr>`;
+                    result.result.pdfData.location.fields.forEach(field => {
                         tableRows += `<tr><td>${field.label}</td><td>${field.value}</td></tr>`;
                     });
 
                     // تفاصيل الكميات
                     tableRows += `<tr><td colspan="2"><strong>تفاصيل الكميات الهندسية</strong></td></tr>`;
-                    result.pdfData.quantities.sections.forEach(section => {
+                    result.result.pdfData.quantities.sections.forEach(section => {
                         tableRows += `<tr><td colspan="2">${section.subtitle}</td></tr>`;
                         section.items.forEach(item => {
                             tableRows += `<tr><td>${item.name}</td><td>${item.value.toLocaleString()} ${item.unit}</td></tr>`;
@@ -588,12 +592,12 @@
                     });
 
                     // تفاصيل التكاليف
-                    tableRows += `<tr><td colspan="2"><strong>${result.pdfData.costs.title}</td></tr>`;
-                    result.pdfData.costs.items.forEach(item => {
+                    tableRows += `<tr><td colspan="2"><strong>${result.result.pdfData.costs.title}</strong></td></tr>`;
+                    result.result.pdfData.costs.items.forEach(item => {
                         tableRows += `<tr><td>${item.name}</td><td>${item.value.toLocaleString()} ${item.unit}</td></tr>`;
                     });
 
-                    tableRows += `<tr><td><strong>الإجمالي</strong></td><td>${result.pdfData.costs.total.toLocaleString()} د.ع</td></tr>`;
+                    tableRows += `<tr><td><strong>الإجمالي</strong></td><td>${result.result.pdfData.costs.total.toLocaleString()} د.ع</td></tr>`;
 
                     resultContent.innerHTML = `
                         <div class="result-section" id="pdfContent">
@@ -602,70 +606,78 @@
                         </div>`;
                     resultContainer.style.display = 'block';
                 } else {
-                    throw new Error(result.message || 'خطأ في معالجة البيانات');
+                    throw new Error(result.result?.message || result.error || 'خطأ في معالجة البيانات');
                 }
 
                 // زر تحميل PDF
                 document.getElementById('downloadPdf').onclick = () => {
-                    if (!lastResult || !lastResult.pdfData) {
+                    if (!lastResult || !lastResult.result || !lastResult.result.pdfData) {
                         alert('لا توجد بيانات لتحميلها. الرجاء حساب التكلفة أولاً.');
                         return;
                     }
 
                     const { jsPDF } = window.jspdf;
                     const doc = new jsPDF({
-                        orientation: 'landscape',
+                        orientation: 'portrait',
                         unit: 'mm',
                         format: 'a4'
                     });
-                    doc.setFont('Arial', 'normal');
+                    doc.setFont('Arial', 'normal'); // Arial لدعم العربية بشكل افتراضي
                     doc.setFontSize(12);
                     doc.setTextColor(0, 0, 0);
 
                     let y = 10;
                     // عنوان التقرير
-                    doc.text('تقرير تكاليف البناء', 10, y);
+                    doc.text('تقرير تكاليف البناء', 190, y, { align: 'right' });
                     y += 10;
 
                     // بيانات العميل
-                    doc.text(lastResult.pdfData.customer.title, 10, y);
+                    doc.text(lastResult.result.pdfData.customer.title, 190, y, { align: 'right' });
                     y += 5;
-                    lastResult.pdfData.customer.fields.forEach(field => {
-                        doc.text(`${field.label}: ${field.value}`, 10, y);
+                    lastResult.result.pdfData.customer.fields.forEach(field => {
+                        doc.text(`${field.label}: ${field.value}`, 190, y, { align: 'right' });
                         y += 5;
                     });
 
                     // معلومات الموقع
                     y += 5;
-                    doc.text(lastResult.pdfData.location.title, 10, y);
+                    doc.text(lastResult.result.pdfData.location.title, 190, y, { align: 'right' });
                     y += 5;
-                    lastResult.pdfData.location.fields.forEach(field => {
-                        doc.text(`${field.label}: ${field.value}`, true, y);
+                    lastResult.result.pdfData.location.fields.forEach(field => {
+                        doc.text(`${field.label}: ${field.value}`, 190, y, { align: 'right' });
                         y += 5;
                     });
 
                     // تفاصيل الكميات
                     y += 10;
-                    doc.text('تفاصيل الكميات الهندسية', 10, y);
+                    doc.text('تفاصيل الكميات الهندسية', 190, y, { align: 'right' });
                     y += 5;
-                    lastResult.pdfData.quantities.sections.forEach(section => {
-                        doc.text(section.subtitle, 10, y);
+                    lastResult.result.pdfData.quantities.sections.forEach(section => {
+                        doc.text(section.subtitle, 190, y, { align: 'right' });
                         y += 5;
                         section.items.forEach(item => {
-                            doc.text(`${item.name}: ${item.value.toLocaleString()} ${item.unit}`, true, y);
+                            doc.text(`${item.name}: ${item.value.toLocaleString()} ${item.unit}`, 190, y, { align: 'right' });
                             y += 5;
+                            if (y > 270) { // التحقق من نهاية الصفحة
+                                doc.addPage();
+                                y = 10;
+                            }
                         });
                     });
 
                     // تفاصيل التكاليف
                     y += 10;
-                    doc.text(lastResult.pdfData.costs.title, 10, y);
+                    doc.text(lastResult.result.pdfData.costs.title, 190, y, { align: 'right' });
                     y += 5;
-                    lastResult.pdfData.costs.items.forEach(item => {
-                        doc.text(`${item.name}: ${item.value.toLocaleString()} ${item.unit}`, true, 10, y);
+                    lastResult.result.pdfData.costs.items.forEach(item => {
+                        doc.text(`${item.name}: ${item.value.toLocaleString()} ${item.unit}`, 190, y, { align: 'right' });
                         y += 5;
+                        if (y > 270) {
+                            doc.addPage();
+                            y = 10;
+                        }
                     });
-                    doc.text(`الإجمالي: ${lastResult.pdfData.costs.total.toLocaleString()} د.ع`, true, 10, y);
+                    doc.text(`الإجمالي: ${lastResult.result.pdfData.costs.total.toLocaleString()} د.ع`, 190, y, { align: 'right' });
 
                     doc.save('تقرير_تكاليف_البناء.pdf');
                 };
